--- a/src/index.css
+++ b/src/index.css
@@ -1,67 +1,34 @@
 @import url("./assets/fonts/fonts.css");
+@import url("./assets/styles/base.css");
+@import url("./assets/styles/scroll.css");
+@import url("./assets/styles/tech.css");
+@import url("./assets/styles/variables.css");
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
-}
-a {
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer;
-}
-input,
-textarea {
-  outline: none;
-}
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  /* display: none; <- Crashes Chrome on hover */
-  -webkit-appearance: none;
-  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-}
-fieldset {
-  padding: 0;
-  margin: 0;
-  border: none;
-}
-ul,
-ol,
-li {
-  list-style: none;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: inherit;
-  font-size: inherit;
-}
-button {
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-  color: inherit;
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-  outline: none;
-}
-body {
-  margin: 0;
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@custom-media --media-mobile-s (max-width: 359px);
+@custom-media --media-mobile-m (max-width: 413px);
+@custom-media --media-mobile-l (max-width: 539px);
+@custom-media --media-tablet-s (max-width: 767px);
+@custom-media --media-tablet-m (max-width: 1023px);
+@custom-media --media-desktop-s (max-width: 1279px);
+@custom-media --media-desktop-m (max-width: 1439px);
+@custom-media --media-desktop-l (max-width: 1559px);
+@custom-media --media-desktop-xl (max-width: 1919px);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+@media screen and (max-width: 1919px) {
+}
+@media screen and (max-width: 1559px) {
+}
+@media screen and (max-width: 1439px) {
+}
+@media screen and (max-width: 1279px) {
+}
+@media screen and (max-width: 1023px) {
+}
+@media screen and (max-width: 767px) {
+}
+@media screen and (max-width: 583px) {
+}
+@media screen and (max-width: 413px) {
+}
+@media screen and (max-width: 359px) {
 }
