--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -6,6 +6,7 @@
   margin-bottom: 80px;
 }
 .avatar {
+  margin: 0 auto;
   width: 100%;
 }
 .description {
@@ -17,22 +18,16 @@
 .text {
   font: var(--font-Roboto-18-regular);
   margin-top: 24px;
+  line-height: 30px;
+}
+.accent {
+  border-radius: var(--border-radius-10);
+  background-color: var(--color-simulator-gray-selected);
+  padding: 5px;
 }
 .avatar img {
-  border-radius: 50%;
-  max-width: 464px;
-  max-height: 464px;
-  width: 100%;
+  border-radius: var(--border-radius-20);
   height: 100%;
-  overflow: hidden;
-}
-@media screen and (min-width: 1023.5px) {
-  .avatar {
-    max-width: 464px;
-  }
-  .avatar img {
-    object-position: 0px -52px;
-  }
 }
 @media screen and (max-width: 1023px) {
   .avatar img {
@@ -40,30 +35,42 @@
   }
 }
 @media screen and (max-width: 767px) {
+  .about {
+    flex-direction: column;
+  }
+  .avatar {
+    max-width: 500px;
+  }
   .avatar img {
     border-radius: var(--border-radius-20);
+  }
+  .description {
+    margin-top: 0;
   }
 }
 @media screen and (max-width: 583px) {
   .about {
-    flex-direction: column;
     gap: 24px;
     margin-top: 32px;
   }
   .avatar {
     text-align: center;
   }
-  .avatar img {
-    max-width: 272px;
-    max-height: 272px;
-  }
-  .description {
-    margin-top: 0;
-  }
   .title {
     font: var(--font-Roboto-Slab-30-regular);
+    text-align: center;
   }
   .text {
+    line-height: 26px;
     margin-top: 16px;
+    text-align: center;
+  }
+  .separator {
+    display: none;
+  }
+
+  .accent {
+    display: block;
+    margin-top: 9px;
   }
 }
