--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -45,6 +45,7 @@
   --color-mern-react: #286091;
   --color-mern-express: #cd786e;
   --color-mern-mongodb: #399e45;
+  --color-error: #ff0000;
 }
 
 /* COLORS INTERACTIVE */
