--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -29,6 +29,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 12px;
+  gap: 8px;
 }
 .block {
   display: flex;
@@ -40,6 +41,7 @@
 
 .blockButton {
   composes: block;
+  margin: auto;
 }
 
 .interaction {
