--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -16,6 +16,9 @@
   padding: 34px 36px;
   border-radius: var(--border-radius-16);
   z-index: var(--z-index-popup);
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .close {
   position: absolute;
@@ -24,4 +27,24 @@
 }
 .icon {
   pointer-events: none;
+}
+
+@media screen and (max-width: 583px) {
+  .modal {
+    align-items: flex-end;
+  }
+  .close {
+    position: absolute;
+    top: -40px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+  }
+  .content {
+    width: 100%;
+    height: 90%;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    padding: 16px;
+  }
 }
