--- a/src/entities/input/ui/style.module.css
+++ b/src/entities/input/ui/style.module.css
@@ -1,7 +1,7 @@
 .inputContainer {
   display: block;
   width: 100%;
-  margin-top: 13px;
+  margin-top: 10px;
 }
 
 .name {
@@ -20,4 +20,5 @@
   font: var(--font-Inter-12-regular);
   color: var(--color-error);
   margin-top: 3px;
+  min-height: 15px;
 }
