--- a/src/shared/ui/nav-tab/ui/style.module.css
+++ b/src/shared/ui/nav-tab/ui/style.module.css
@@ -21,6 +21,7 @@
     width: 100%;
     height: 3px;
     border-radius: var(--border-radius-6);
+    background-color: var(--color-header-link);
 }
 
 @media screen and (max-width: 767px) {
