--- a/src/shared/ui/card-info/ui/card-info-type/style.module.css
+++ b/src/shared/ui/card-info/ui/card-info-type/style.module.css
@@ -5,6 +5,7 @@
     background-color: white;
     border-radius: var(--border-radius-10);
     box-shadow: 0px 10px 22px rgba(59, 74, 116, 0.1);
+    z-index: var(--z-index-m);
 }
 .tag {
     font: var(--font-Roboto-14-normal);
