--- a/src/shared/ui/burger/ui/style.module.css
+++ b/src/shared/ui/burger/ui/style.module.css
@@ -13,8 +13,8 @@
     position: absolute;
     left: 0;
     width: 100%;
-    height: 1.5px;
-    background-color: white;
+    height: 2px;
+    background-color: var(--color-header-button);
     transition: 0.3s;
 }
 .burger::after {
@@ -26,10 +26,12 @@
 .burgerActive::after {
     top: 50%;
     transform: translateY(-50%) rotate(45deg);
+    background-color: #fff;
 }
 .burgerActive::before {
     bottom: 50%;
     transform: translateY(50%) rotate(-45deg);
+    background-color: #fff;
 }
 @media screen and (min-width: 583.5px) {
     .burger {
